

[package]
name = "rost"
version = "0.1.0"
authors = ["erik-helmers"]
edition = "2018"
llvm-libunwind = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rlibc = "1.0.0"
x86_64 = "0.11.1"
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}

volatile = "0.3.0" # diff = 1
spin = "0.5.2" # diff = 4
uart_16550 = "0.2.7"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.4"
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
#"-display", "none"]


test-success-exit-code = 33         # (0x10 << 1) | 1


[[test]]
name = "stack_overflow"
harness = false