[package]
name = "rost_nbs"
version = "0.1.0"
authors = ["Erik Helmers <erik.helmers@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7.0"
paste = "1.0.3"

[features]
default = [ "x86_64" ]
x86_64 = []

